# Biometry-Auth-Service

./: .gitignore  Makefile  docker-compose.yml
biometry_front/: index.html  package-lock.json  package.json
biometry_front/src/: App.jsx  Authentication.jsx  Registration.jsx  main.jsx
biometry_kernel/: Dockerfile  pyproject.toml
biometry_kernel/src/: __init__.py  broker.py  database.py  lifespan.py  main.py
biometry_kernel/src/controllers/: __init__.py  auth.py
biometry_kernel/src/models/schemas/: __init__.py  user.py
biometry_kernel/src/models/tables/: user.py
biometry_kernel/src/services/: __init__.py  auth.py
face_recognition_service/: pyproject.toml
face_recognition_service/src/: main.py
face_recognition_service/src/utils/: face_recognition.py
